# fps-bot

./: README.md  fps-bot.cabal  stack.yaml
src/: locateStartLevelThumbnail.hs  recordGame.hs
