name:                fps-bot
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/fps-bot#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable locateStartLevelThumbnail
  hs-source-dirs: src
  main-is: locateStartLevelThumbnail.hs
  build-depends:	base,
                        process,
                        filepath,
                        directory,
                        JuicyPixels,
                        opencv
  default-language: Haskell2010
                               
executable recordGame
  hs-source-dirs:	src
  main-is:		recordGame.hs
  build-depends:	base,
                        process,
                        filepath,
                        directory

  default-language:     Haskell2010

executable fps-bot-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , fps-bot
  default-language:    Haskell2010

test-suite fps-bot-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , fps-bot
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/fps-bot
